Add technologies page Fix home page layout

--- a/src/assets/stylesheets/_shared.scss
+++ b/src/assets/stylesheets/_shared.scss
@@ -317,4 +317,14 @@ img {
   margin-right: 0px !important;
   margin-left: 0px !important;
 }
+
+.tech-list {
+  height: 130px !important;
+  text-align: left;
+  padding: 30px;
+}
+
+.media-svg-logo {
+  padding-right: 20px;
+}
 /* shared end */
