Add publications page

--- a/src/assets/stylesheets/_shared.scss
+++ b/src/assets/stylesheets/_shared.scss
@@ -327,4 +327,9 @@ img {
 .media-svg-logo {
   padding-right: 20px;
 }
+
+.book-share-card {
+  padding: 20px;
+  border: 1px solid black;
+}
 /* shared end */
