Fix css for mobile view

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -1046,3 +1046,14 @@
     padding: 4rem;
   }
 }
+
+.nerd-img {
+  @include media-breakpoint-up(sm) {
+    min-height: 250px;
+    max-height: 250px
+  }
+  @include media-breakpoint-down(sm) {
+    min-height: 150px;
+    max-height: 150px
+  }
+}
