--- a/src/assets/stylesheets/_icon.scss
+++ b/src/assets/stylesheets/_icon.scss
@@ -1,11 +1,11 @@
 /* icons */
 @font-face {
   font-family: 'josh-icons';
-  src: url('../fonts/josh-icons.eot?3loxio');
-  src: url('../fonts/josh-icons.eot?3loxio#iefix') format('embedded-opentype'),
-  url('../fonts/josh-icons.ttf?3loxio') format('truetype'),
-  url('../fonts/josh-icons.woff?3loxio') format('woff'),
-  url('../fonts/josh-icons.svg?3loxio#josh-icons') format('svg');
+  src: url('/fonts/josh-icons.eot?3loxio');
+  src: url('/fonts/josh-icons.eot?3loxio#iefix') format('embedded-opentype'),
+  url('/fonts/josh-icons.ttf?3loxio') format('truetype'),
+  url('/fonts/josh-icons.woff?3loxio') format('woff'),
+  url('/fonts/josh-icons.svg?3loxio#josh-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
