--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -64,216 +64,6 @@
   }
 }
 
-.section-overlay {
-  @include flexbox();
-  @include flex-direction(column);
-  height: 200vh;
-  padding: 0;
-  background: $gray-10 url("#{$assets_url}images/home-banner-clear.jpeg");
-
-  @include media-breakpoint-down(md) {
-    height: 190vh;
-
-    &.bg-props {
-      background: #121212 url("#{$assets_url}images/home-banner-mobile.jpg")
-        no-repeat;
-      background-position: top right;
-      background-size: 100% auto;
-    }
-  }
-
-  .section-slide {
-    min-height: calc(100vh - 76px);
-    height: calc(100vh - 76px);
-
-    @include media-breakpoint-down(md) {
-      height: calc(100vh - 54px);
-    }
-  }
-
-  .overlay-container {
-    @include flex(1);
-    position: relative;
-  }
-
-  .overlay-content {
-    position: absolute;
-    width: rem(490px);
-    display: inline-block;
-    left: 0;
-    text-align: center;
-
-    span {
-      padding: rem(10px) 0;
-      color: $white;
-      font-weight: 300;
-      text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
-
-      @include media-breakpoint-down(md) {
-        font-weight: 400;
-      }
-    }
-
-    @include media-breakpoint-down(md) {
-      left: 50%;
-      @include translate(-50%, 0);
-    }
-
-    @include media-breakpoint-down(sm) {
-      width: unset;
-      left: rem(15px);
-      right: rem(15px);
-      @include translate(0, 0);
-    }
-  }
-
-  .-slide1 {
-    top: calc(50vh - 227px);
-
-    @include media-breakpoint-down(sm) {
-      top: calc(50vh - 217px);
-    }
-  }
-
-  .-slide2 {
-    top: calc(50vh - 107px);
-
-    @include media-breakpoint-down(sm) {
-      top: calc(50vh - 187px);
-    }
-
-    h1 {
-      margin: 0 0 rem(48px);
-    }
-
-    p {
-      font-size: rem(20px);
-      line-height: rem(26px);
-      letter-spacing: 1px;
-      font-weight: 300;
-      margin: 0 0 rem(13px);
-      text-transform: none;
-      text-align: left;
-    }
-  }
-
-  h1 {
-    color: $white;
-    text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
-    margin: 0;
-    font-weight: 300;
-
-    @include media-breakpoint-down(md) {
-      font-weight: 300;
-    }
-
-    @include media-breakpoint-down(sm) {
-      font-size: rem(40px);
-      margin: 0 0 rem(16px);
-    }
-  }
-
-  h3 {
-    color: $white;
-    text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
-    margin: 0 0 rem(48px);
-    line-height: rem(42px);
-    font-weight: 300;
-
-    @include media-breakpoint-down(md) {
-      font-weight: 300;
-    }
-
-    @include media-breakpoint-down(sm) {
-      font-size: rem(24px);
-      line-height: rem(32px);
-    }
-  }
-
-  .btn {
-    margin: 0 0 rem(14px);
-  }
-
-  p {
-    font-size: 16px;
-    color: $white;
-    text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
-    letter-spacing: 2px;
-    margin: 0 0 rem(17px);
-    line-height: normal;
-    text-transform: uppercase;
-    font-weight: 300;
-
-    @include media-breakpoint-down(md) {
-      font-weight: 300;
-    }
-
-    @include media-breakpoint-down(sm) {
-      font-size: rem(16px);
-      line-height: rem(23px);
-    }
-  }
-
-  .scroll-down {
-    position: absolute;
-    top: calc(100vh - 142px);
-
-    @include media-breakpoint-down(md) {
-      top: calc(100vh - 102px);
-    }
-
-    @include media-breakpoint-down(sm) {
-      top: calc(100vh - 92px);
-      display: inline-block !important;
-    }
-  }
-}
-
-.section-expertise {
-  background: $galliano url("#{$assets_url}images/home-industries-bg.jpg")
-    repeat top center;
-
-  @include media-breakpoint-up(lg) {
-    @include flexbox();
-    @include align-items(center);
-  }
-
-  @include media-breakpoint-down(md) {
-    height: unset;
-  }
-
-  .section-heading {
-    margin: 0 0 rem(65px);
-
-    @include media-breakpoint-down(md) {
-      margin: 0 0 rem(50px);
-    }
-  }
-
-  .img-expertise {
-    max-width: rem(512px);
-    margin: 0 0 rem(80px);
-
-    @include media-breakpoint-down(md) {
-      margin: 0 0 rem(50px);
-    }
-  }
-}
-
-.section-work {
-  background: $fountain-blue url("#{$assets_url}images/home-service-bg.jpg")
-    no-repeat top center;
-
-  @include media-breakpoint-up(lg) {
-    @include flexbox();
-    @include align-items(center);
-  }
-
-  .section-heading {
-    margin: 0 0 rem(46px);
-  }
-}
-
 /* Section Client */
 .section-clients {
   background: $gray-96;
@@ -330,93 +120,15 @@
 
 /* End */
 
-.section-about {
-  background: $roman url("#{$assets_url}images/home-aboutus-bg.jpg") no-repeat
+.webp-bg-contact {
+  background: transparent url("#{$assets_url}images/bg-contact.png.webp") no-repeat
     top center;
-
-  @include media-breakpoint-up(lg) {
-    @include flexbox();
-    @include align-items(center);
-  }
-
-  .section-heading {
-    margin: 0 0 rem(30px);
-
-    @include media-breakpoint-down(md) {
-      margin: 0 0 rem(50px);
-    }
-  }
-
-  .about-wrap {
-    @extend .d-flex;
-
-    @include media-breakpoint-down(md) {
-      @include flex-direction(column);
-    }
-  }
-
-  .stats-box {
-    @extend .d-flex;
-    @extend .flex-column;
-    @include justify-content(space-between);
-    @include flex(0 0 30%);
-    padding: rem(20px 8px);
-
-    @include media-breakpoint-down(md) {
-      @include order(2);
-      padding: rem(0 8px);
-    }
-  }
-
-  .stats {
-    color: $white;
-    text-align: center;
-
-    @include media-breakpoint-down(md) {
-      margin: 0 0 rem(32px);
-    }
-
-    h4 {
-      font-size: rem(40px);
-      line-height: rem(48px);
-      font-weight: 300;
-      margin: 0 0 rem(4px);
-      opacity: 0.8;
-    }
-
-    p {
-      font-size: rem(13px);
-      line-height: rem(18px);
-      font-weight: 300;
-      margin: 0;
-      letter-spacing: 1px;
-      opacity: 0.8;
-    }
-  }
-
-  .stats-button {
-    .btn {
-      &:hover {
-        color: $roman;
-        font-weight: 300;
-      }
-    }
-  }
-
-  .about-banner {
-    @include flex(0 0 40%);
-    text-align: center;
-
-    @include media-breakpoint-down(md) {
-      @include order(1);
-      margin: 0 0 rem(36px);
-    }
-  }
 }
-
-.section-contact {
+.no-webp-bg-contact {
   background: transparent url("#{$assets_url}images/bg-contact.png") no-repeat
     top center;
+}
+.section-contact {
   background-size: cover;
   padding: rem(142px 0 110px);
 
@@ -462,12 +174,22 @@
     }
   }
 
+  .mb-webp-bg-contact {
+    @include media-breakpoint-down(md) {
+      background: transparent url("#{$assets_url}images/bg-contact.png.webp")
+        no-repeat top right;
+      }
+  }
+  .mb-no-webp-bg-contact {
+    @include media-breakpoint-down(md) {
+      background: transparent url("#{$assets_url}images/bg-contact.png")
+    }
+  }
+
   .contact-banner {
     display: none;
 
     @include media-breakpoint-down(md) {
-      background: transparent url("#{$assets_url}images/bg-contact.png")
-        no-repeat top right;
       background-size: cover;
       display: block;
       height: rem(217px);
@@ -514,15 +236,6 @@
   }
 }
 
-.section-spacer {
-  height: 100vh;
-
-  // iPad/Tablet (Portrait/Landscape) and Below(All Mobile Screens)
-  @media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
-    display: none !important;
-  }
-}
-
 // Parallax Scroll SCSS
 .bg-props {
   background-position: center center;
@@ -537,25 +250,6 @@
 //   // width: 10px;
 //   // background-color: red;
 // }
-
-.company-details {
-  position: relative;
-  @include media-breakpoint-only(xl) {
-    top: 54%;
-  }
-  @include media-breakpoint-only(lg) {
-    top: 57%;
-  }
-  @include media-breakpoint-only(md) {
-    top: 54%;
-  }
-  @include media-breakpoint-only(sm) {
-    top: 52%;
-  }
-  @include media-breakpoint-only(xs) {
-    top: 52%;
-  }
-}
 
 .pull-right {
   float: right;
@@ -606,11 +300,6 @@
       }
     }
   }
-}
-
-.width-adjust {
-  width: 92px !important;
-  border-radius: 15px 15px 15px 15px;
 }
 
 .height-adjust {
@@ -666,29 +355,6 @@
   margin-top: 140px;
 }
 
-.trending-title {
-  font-size: 39px;
-  color: #ffffff;
-  line-height: 46px;
-
-  @include media-breakpoint-down(sm) {
-    font-size: 26px;
-    line-height: 32px;
-  }
-  // font-family: lato bold;
-}
-
-.trending-subtitle {
-  font-size: 25px;
-  color: #ffffff;
-  line-height: 30px;
-
-  @include media-breakpoint-down(sm) {
-    font-size: 17px;
-    line-height: 21px;
-  }
-}
-
 .top-pad-5 {
   padding-top: 5%;
 }
@@ -731,11 +397,8 @@
 
 .slick-active > .orange-color {
   background-color: #cf4338;
-  // // display: in  line-block;
   width: 10px;
   height: 10px;
-  //   // margin: 6px;
-  // background-color: #555;
 }
 
 .slick-dots > :not(.slick-active) > .orange-color {
@@ -824,14 +487,6 @@
   width: 40px !important;
   height: 40px !important;
 }
-
-// .slick-prev {
-//   left: 0 !important;
-// }
-
-// .slick-next {
-//   right: 0 !important;
-// }
 
 .size-30 {
   width: 30px;
