--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -35,5 +35,6 @@
 @import "pages/about-us";
 @import "pages/contact-us";
 @import "pages/testimonial";
+@import "pages/opensource";
 /* offcanvas */
 @import "offcanvas";
