--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -844,7 +844,7 @@
     padding: rem(20px 20px 40px);
   }
   .slider-item {
-    padding: 0 rem(30px);
+    padding: rem(50px) rem(30px) 0;
     h3,
     p,
     h6 {
@@ -859,6 +859,10 @@
       font-size: rem(18px);
       font-weight: bold;
     }
+  }
+  .slick-slider {
+    background: url("../images/testimonials/Testimonial.svg") no-repeat center
+      top;
   }
   .slick-dots {
     li {
@@ -883,10 +887,34 @@
       }
     }
   }
+  .slick-next {
+    background-image: url("../images/testimonials/next.png");
+  }
+  .slick-prev {
+    background-image: url("../images/testimonials/Previous.png");
+  }
   .slick-next,
   .slick-prev {
+    height: 46px;
+    width: 46px;
+    position: absolute;
+    background-size: 46px auto;
+    background-repeat: no-repeat;
+    @include media-breakpoint-down(sm) {
+      height: 30px;
+      width: 30px;
+      background-size: 30px auto;
+    }
+  }
+  .slick-next,
+  .slick-prev {
+    top: 25%;
+    @include media-breakpoint-down(sm) {
+      top: 10%;
+    }
     &::before {
-      color: #333333;
+      content: "";
     }
   }
 }
+// success stories scss
