--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -471,20 +471,27 @@
 .read-more {
   button {
     background-color: #ffffff;
-    float: right;
-    margin-top: 14px;
-    height: 30px;
-    position: relative;
-    bottom: 5px;
-    width: 92px;
+    // float: right;
+    font-size: 9px;
+    padding: 4px;
+    // margin-top: 14px;
+    // height: 30px;
+    // position: relative;
+    // bottom: 5px;
+    // width: 92px;
     width: 92px;
     border-radius: 15px 15px 15px 15px;
+    &:hover,
+    &:focus {
+      color: #dc3545;
+      border-color: #dc3545;
+    }
   }
-  span {
-    font-size: 9px;
-    position: relative;
-    bottom: 5px;
-  }
+  // span {
+  //   font-size: 9px;
+  //   position: relative;
+  //   bottom: 5px;
+  // }
 
   .btn-secondary {
     // display: none;
