--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -811,6 +811,12 @@
       transform: scale(1.1);
       transition: transform 0.2s;
       z-index: 2;
+      @include media-breakpoint-down(sm) {
+        background-color: unset;
+        transform: none;
+        transition: none;
+        z-index: unset;
+      }
     }
     @include media-breakpoint-down(sm) {
       padding: 12px;
@@ -1098,6 +1104,17 @@
       width: 180px;
       background-position: center;
       position: relative;
+      &:hover {
+        background: transparent
+          url("../images/successStories/honey_shape_hover.png") no-repeat;
+        background-size: contain;
+        background-position: center;
+        @include media-breakpoint-down(sm) {
+          background: transparent
+            url("../images/successStories/honey-shape-mobile.png") no-repeat;
+          background-size: contain;
+        }
+      }
       @include media-breakpoint-down(sm) {
         background: transparent
           url("../images/successStories/honey-shape-mobile.png") no-repeat;
@@ -1170,6 +1187,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      cursor: pointer;
       @include media-breakpoint-down(md) {
         margin: 10px;
         height: 150px;
