media component ui on talk page

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -35,5 +35,7 @@
 @import "pages/about-us";
 @import "pages/contact-us";
 @import "pages/testimonial";
+@import "pages/new-pages";
+
 /* offcanvas */
 @import "offcanvas";
