--- a/src/shared-components/media/media.scss
+++ b/src/shared-components/media/media.scss
@@ -13,7 +13,7 @@
 }
 
 .media-frame {
-  padding: 0 rem(8px);
+  // padding: 0 rem(8px);
   iframe {
     border-radius: rem(16px 16px 0 0);
     height: auto;
