--- a/src/shared-components/article/article.css
+++ b/src/shared-components/article/article.css
@@ -61,9 +61,12 @@
   .article-items .image-wrap {
     max-width: 388px;
     margin: 0 -2.125rem 1.5rem;
-    height: 100px;
-    border: 3px solid red;
-    background-color: lightgrey; }
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 0.5rem; }
     @media (min-width: 992px) {
       .article-items .image-wrap {
         margin: 0 -2.125rem 1rem; } }
+    .article-items .image-wrap img {
+      height: 146px;
+      width: 100%;
+      border-radius: 0.5rem; }
